Fix(web): Fix `PricingPlan` header rows randomly collapsing in a single-column `Matrix` in Safari
In a single-column `Matrix` (i.e. `--spirit-matrix-columns-internal` equals 1), overlapping of some
items in `PricingPlan` header could be observed in Safari. By forcing a repaint, the `Matrix` grid
is recalculated and the items are placed correctly.

--- a/packages/web/src/scss/components/Matrix/_Matrix.scss
+++ b/packages/web/src/scss/components/Matrix/_Matrix.scss
@@ -11,6 +11,25 @@
 // 3. Force subgrid on direct descendants. Only effective when the descendant's `display` is set to `grid`.
 //
 // 4. Place the descendants in the Matrix layout and make them inherit its grid rows.
+//
+// 5. Trigger repaint to fix PricingPlan header rows randomly collapsing in a single-column Matrix in Safari.
+//    Source: https://www.flowradar.com/answer/causing-css-grid-elements-display-incorrectly-safari-fix-safari-desktop-ipad
+//
+//    ℹ️ Alternative solution: detecting the number of columns with a style query
+//
+//    Since the Matrix column count is controlled by custom properties, we could turn off subgrid for Matrix children
+//    based on a style query which is supported in Safari (but not in all baseline browsers) as of July 2025:
+//
+//    ```
+//    @container style(--spirit-matrix-columns-internal: 1) {
+//       .Matrix > * {
+//         grid-template-rows: <BUT WHAT NOW?> !important;
+//       }
+//    }
+//    ```
+//
+//    We don't use this approach because it would lead to mixing component styles: it either requires forcing a number
+//    of rows of Matrix children from outside, or reading a custom property of Matrix in the PricingPlan component.
 
 @use '@tokens' as tokens;
 @use '../../tools/reset';
@@ -59,6 +78,7 @@ $_default-rows: 100; // 1.
     display: grid;
     grid-template-columns: repeat(var(--#{tokens.$css-variable-prefix}matrix-columns-internal), 1fr); // 2.a
     grid-template-rows: repeat(var(--#{tokens.$css-variable-prefix}matrix-rows-internal), auto); // 2.a
+    will-change: transform; // 5.
 }
 
 // stylelint-disable-next-line selector-max-universal -- 3.
